<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal"
        android:text="@string/rejestruj"
        android:textColor="@color/white"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/podaj_email" />

    <EditText
        android:id="@+id/editTextText_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/podaj_haslo" />

    <EditText
        android:id="@+id/editTextTextPassword_haslo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/powtorz_haslo" />

    <EditText
        android:id="@+id/editTextTextPassword_powtorz_haslo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_zatwierdz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zatwierdz"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView_komunikaty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Autor: 12345678901" />
</LinearLayout>